--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   padding: 2rem;
   text-align: center;
 }
+.capital{
+  display: flex;
+  justify-content: center;
+}
 
 /* .logo {
   height: 6em;
